--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "babel-loader": "^8.2.2",
+    "browserfs": "^1.4.3",
     "bulma": "^0.9.2",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
