--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A new web application",
   "author": "Author",
   "scripts": {
-    "serve": "webpack serve --mode development",
+    "serve": "webpack serve --mode=development --hot",
     "build": "webpack --mode production"
   },
   "devDependencies": {
@@ -24,8 +24,10 @@
     "vue": "^2.6.12",
     "vue-loader": "^15.9.7",
     "vue-template-compiler": "^2.6.12",
+    "wasm-loader": "^1.3.0",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "worker-loader": "^3.0.8"
   }
 }
