--- a/package.json
+++ b/package.json
@@ -9,26 +9,24 @@
     "publish": "gh-pages -d dist"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
+    "@babel/core": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
     "babel-loader": "^8.2.2",
     "browserfs": "^1.4.3",
     "bulma": "^0.9.2",
-    "copy-webpack-plugin": "^8.1.1",
-    "css-loader": "^5.2.4",
-    "gh-pages": "^3.1.0",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.6",
+    "gh-pages": "^3.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
-    "node-sass": "^6.0.0",
-    "sass-loader": "^11.1.1",
-    "style-loader": "^2.0.0",
-    "url-loader": "^4.1.1",
-    "vue": "^2.6.12",
+    "sass": "^1.34.1",
+    "sass-loader": "^12.1.0",
+    "vue": "^2.6.14",
     "vue-loader": "^15.9.7",
-    "vue-template-compiler": "^2.6.12",
+    "vue-template-compiler": "^2.6.14",
     "wasm-loader": "^1.3.0",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "worker-loader": "^3.0.8"
   }
