--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^5.2.6",
     "gh-pages": "^3.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "jszip": "^3.6.0",
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.34.1",
     "sass-loader": "^12.1.0",
