--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-webpack-plugin": "^5.3.1",
     "jszip": "^3.6.0",
     "mini-css-extract-plugin": "^1.6.0",
+    "plausible-tracker": "^0.3.9",
     "sass": "^1.34.1",
     "sass-loader": "^12.1.0",
     "vue": "^2.6.14",
